2011-03-07 John Wu <John dot Wu at ACM dot org>
	* category.h, category.cpp: change the definition of getNumKeys,
	getKey, and isKey to invoke prepareMembers when the dictionary is
	empty

2011-03-02 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp: update part::readMetaTags to match the
	part::readMetaData
	* win/MinGW.mak: add SHELL=cmd.exe to remove the dependency on
	MSYS (which provides bash), removed the use of rm and perl from
	tests (now able to compile ibis and check-ibis with nuwen.net's
	distribution of MinGW without MSYS)
	* src/const.h: add conditional statement to include stdint.h when
	compiling under MinGW
	* src/part.cpp: replace the exception generated when missing
	metadata file with an error message (to avoid a problem reported
	by Andrew Olson)
	* src/const.h, src/capi.h: update the conditional compilation
	macros to compile under MinGW
	* src/resource.cpp:390-397 add statements to strip away the outer
	most quotes
	* src/part.cpp:1538-1563 add a case in part::readMetaData to deal
	with obviously bad values in meta tags

2011-02-28 John Wu <John dot Wu at ACM dot org>
	* tests/Makefile.am: add dependency on TESTDIR for some targets

2011-02-25 John Wu <John dot Wu at ACM dot org>
	* configure.ac: add option --without-getpwuid

2011-02-13 John Wu <John dot Wu at ACM dot org>
	* src/bundles.cpp: replace all calls to ibis::util::logMessage
	with LOGGER macro, add some status messages in the constructors of
	ibis::bundle and derivatives
	* src/fileManager.cpp: add log messages whenever storage::m_begin
	is 0
	* src/bord.cpp, src/filter.cpp, src/mensa.cpp: add a couple of
	logging statments

2011-02-12 John Wu <John dot Wu at ACM dot org>
	* src/fileManager.cpp: add statement to indicate initialization
	has completed in two constructors of storage object to aid
	debugging of memory leak related to check-sq1
	* src/colValues.cpp: add try-catch block around array->resize in
	the constructors